Change Log for OpenXava project
===============================

- Fix: Entering alphabetic values for filtering numeric data in list generates a generic system error.
- New isNumeric() method in Strings utility class.
- Fix: Top bar module links displaced when the page is customized adding content on top.
- Fix: Module search does not work with uppercase letters. 
- Fix: Ugly horizontal scrollbar when there are many modules in top menu.
- Fix: Many actions on bottom of the view are ugly.
- Fix: Visual defect in links for changing mode.
- Fix: Help link too close to mode links.
- Fix: Style for selected row hides the line separator.
- Fix: Totals in element collections are not recalculated after removing a row.
- Fix: After removing a line from an element collection events and calculated properties does not work in the collection. 
- Fix: Reloading page after removing a line from an element collection leaves a blank line.
- Some new common use labels to be used in applications.

OpenXava 5.1 (2014-10-21)
-------------------------
- @NoSearch supported for references in embeddable classes of element collections.
- @ReadOnly and @EditOnly supported for @ElementCollection.
- @OnChangeSearch supported for references in embeddable classes of element collections.
- @OnChange supported in embeddable classes of element collections.
- @SearchListCondition supported for references in embeddable classes of element collections.
- @SearchAction supported for references in embeddable classes of element collections.
- Search action for references available in element collections.
- Support for @DescriptionsList references in element collections, including dependent ones. 
- @DefaultValueCalculator support in @ElementCollection.
- Improving AJAX behavior for element collection, with x10 improvement in responsiveness.
- Reference data fetching in element collections optimized.
- Searching references by @SearchKey properties in element collections.