@@ -30,7 +30,7 @@ String oxVersion = org.openxava.controller.ModuleManager.getVersion();
 </head>
 
 <body <%=NaviOXStyle.getBodyClass(request)%>>
-
+	
 	<div id="main_navigation">
 		<jsp:include page="mainNavigation.jsp"/>
 	</div>
